// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptFilters rendering tests PromptFilters - filterContext null - test 1`] = `<div />`;

exports[`PromptFilters rendering tests PromptFilters - reset btn disabled - rendered test 1`] = `
<div>
  <div
    data-testid="prompts-filter"
  >
    <div
      class="flex items-center justify-end mb-4 pb-3 border-b border-slate-200"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 text-slate-600 hover:text-slate-900 hover:bg-slate-100"
        data-slot="button"
        data-testid="reset-btn"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-rotate-ccw w-3.5 h-3.5 mr-1.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
        </svg>
        <span
          class="text-xs font-medium"
        >
          Zurücksetzen
        </span>
      </button>
    </div>
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="space-y-2"
        data-testid="search-filter"
      >
        <label
          class="text-sm font-semibold text-slate-700 uppercase tracking-wide"
          data-testid="filter-label"
        >
          Suchbegriff
        </label>
        <div
          class="relative"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 h-9 min-w-0 px-3 outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive w-full pl-10 pr-4 py-2.5 bg-slate-50/50 border border-slate-200 rounded-lg text-sm text-slate-900 placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500/50 focus:border-blue-400 focus:bg-white transition-all shadow-sm"
            data-slot="input"
            data-testid="search-input"
            id="search-prompts"
            placeholder="Nach Titel suchen..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="space-y-2"
        data-testid="categories-filter"
      >
        <label
          class="text-xs font-semibold text-slate-700 uppercase tracking-wide"
          data-testid="filter-label"
        >
          Kategorien
        </label>
        <div
          aria-controls="radix-_r_6_"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="w-full min-h-[42px] cursor-pointer rounded-lg border border-slate-200 bg-slate-50/50 hover:bg-white hover:border-slate-300 px-3 py-2 flex items-center flex-wrap gap-2 transition-all shadow-sm"
          data-slot="popover-trigger"
          data-state="closed"
          data-testid="popover-trigger"
          type="button"
        >
          <span
            class="text-slate-400 text-sm"
            data-testid="no-selected-category"
          >
            Kategorien auswählen...
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevrons-up-down ml-auto h-4 w-4 text-slate-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m7 15 5 5 5-5"
            />
            <path
              d="m7 9 5-5 5 5"
            />
          </svg>
        </div>
        <div
          data-testid="mock-react-presence"
        >
          <div
            data-testid="mock-react-portal"
          >
            <div
              data-testid="mock-react-presence"
            >
              <div
                data-radix-popper-content-wrapper=""
                style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px); min-width: max-content; --radix-popper-available-width: -16px; --radix-popper-available-height: -4px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 50% 0px;"
              >
                <div
                  class="bg-popover text-popover-foreground data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 origin-(--radix-popover-content-transform-origin) rounded-md border outline-hidden w-72 p-0 shadow-lg border-slate-200"
                  data-align="center"
                  data-side="bottom"
                  data-slot="popover-content"
                  data-state="closed"
                  id="radix-_r_6_"
                  role="dialog"
                  style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin); --radix-popover-content-available-width: var(--radix-popper-available-width); --radix-popover-content-available-height: var(--radix-popper-available-height); --radix-popover-trigger-width: var(--radix-popper-anchor-width); --radix-popover-trigger-height: var(--radix-popper-anchor-height);"
                  tabindex="-1"
                >
                  <div
                    class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
                    cmdk-root=""
                    data-slot="command"
                    tabindex="-1"
                  >
                    <label
                      cmdk-label=""
                      for="radix-_r_9_"
                      id="radix-_r_8_"
                      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
                    />
                    <div
                      aria-label="Suggestions"
                      class="max-h-[300px] scroll-py-1 overflow-x-hidden overflow-y-auto"
                      cmdk-list=""
                      data-slot="command-list"
                      data-testid="category-options"
                      id="radix-_r_7_"
                      role="listbox"
                      tabindex="-1"
                    >
                      <div
                        cmdk-list-sizer=""
                      >
                        <div
                          class="py-6 text-sm text-slate-500"
                          cmdk-empty=""
                          data-slot="command-empty"
                          data-testid="category-options-empty"
                          role="presentation"
                        >
                          Keine Kategorien gefunden.
                        </div>
                        <div
                          class="text-foreground [&_[cmdk-group-heading]]:text-muted-foreground overflow-hidden p-1 [&_[cmdk-group-heading]]:px-2 [&_[cmdk-group-heading]]:py-1.5 [&_[cmdk-group-heading]]:text-xs [&_[cmdk-group-heading]]:font-medium"
                          cmdk-group=""
                          data-slot="command-group"
                          data-value="undefined"
                          role="presentation"
                        >
                          <div
                            cmdk-group-items=""
                            role="group"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromptFilters rendering tests PromptFilters - reset btn enabled - rendered test 1`] = `
<div>
  <div
    data-testid="prompts-filter"
  >
    <div
      class="flex items-center justify-end mb-4 pb-3 border-b border-slate-200"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 text-slate-600 hover:text-slate-900 hover:bg-slate-100"
        data-slot="button"
        data-testid="reset-btn"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-rotate-ccw w-3.5 h-3.5 mr-1.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
        </svg>
        <span
          class="text-xs font-medium"
        >
          Zurücksetzen
        </span>
      </button>
    </div>
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="space-y-2"
        data-testid="search-filter"
      >
        <label
          class="text-sm font-semibold text-slate-700 uppercase tracking-wide"
          data-testid="filter-label"
        >
          Suchbegriff
        </label>
        <div
          class="relative"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 h-9 min-w-0 px-3 outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive w-full pl-10 pr-4 py-2.5 bg-slate-50/50 border border-slate-200 rounded-lg text-sm text-slate-900 placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500/50 focus:border-blue-400 focus:bg-white transition-all shadow-sm"
            data-slot="input"
            data-testid="search-input"
            id="search-prompts"
            placeholder="Nach Titel suchen..."
            type="text"
            value="test search"
          />
        </div>
      </div>
      <div
        class="space-y-2"
        data-testid="categories-filter"
      >
        <label
          class="text-xs font-semibold text-slate-700 uppercase tracking-wide"
          data-testid="filter-label"
        >
          Kategorien
        </label>
        <div
          aria-controls="radix-_r_0_"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="w-full min-h-[42px] cursor-pointer rounded-lg border border-slate-200 bg-slate-50/50 hover:bg-white hover:border-slate-300 px-3 py-2 flex items-center flex-wrap gap-2 transition-all shadow-sm"
          data-slot="popover-trigger"
          data-state="closed"
          data-testid="popover-trigger"
          type="button"
        >
          <span
            class="text-slate-400 text-sm"
            data-testid="no-selected-category"
          >
            Kategorien auswählen...
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevrons-up-down ml-auto h-4 w-4 text-slate-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m7 15 5 5 5-5"
            />
            <path
              d="m7 9 5-5 5 5"
            />
          </svg>
        </div>
        <div
          data-testid="mock-react-presence"
        >
          <div
            data-testid="mock-react-portal"
          >
            <div
              data-testid="mock-react-presence"
            >
              <div
                data-radix-popper-content-wrapper=""
                style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px); min-width: max-content; --radix-popper-available-width: -16px; --radix-popper-available-height: -4px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 50% 0px;"
              >
                <div
                  class="bg-popover text-popover-foreground data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 origin-(--radix-popover-content-transform-origin) rounded-md border outline-hidden w-72 p-0 shadow-lg border-slate-200"
                  data-align="center"
                  data-side="bottom"
                  data-slot="popover-content"
                  data-state="closed"
                  id="radix-_r_0_"
                  role="dialog"
                  style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin); --radix-popover-content-available-width: var(--radix-popper-available-width); --radix-popover-content-available-height: var(--radix-popper-available-height); --radix-popover-trigger-width: var(--radix-popper-anchor-width); --radix-popover-trigger-height: var(--radix-popper-anchor-height);"
                  tabindex="-1"
                >
                  <div
                    class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
                    cmdk-root=""
                    data-slot="command"
                    tabindex="-1"
                  >
                    <label
                      cmdk-label=""
                      for="radix-_r_3_"
                      id="radix-_r_2_"
                      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
                    />
                    <div
                      aria-label="Suggestions"
                      class="max-h-[300px] scroll-py-1 overflow-x-hidden overflow-y-auto"
                      cmdk-list=""
                      data-slot="command-list"
                      data-testid="category-options"
                      id="radix-_r_1_"
                      role="listbox"
                      tabindex="-1"
                    >
                      <div
                        cmdk-list-sizer=""
                      >
                        <div
                          class="py-6 text-sm text-slate-500"
                          cmdk-empty=""
                          data-slot="command-empty"
                          data-testid="category-options-empty"
                          role="presentation"
                        >
                          Keine Kategorien gefunden.
                        </div>
                        <div
                          class="text-foreground [&_[cmdk-group-heading]]:text-muted-foreground overflow-hidden p-1 [&_[cmdk-group-heading]]:px-2 [&_[cmdk-group-heading]]:py-1.5 [&_[cmdk-group-heading]]:text-xs [&_[cmdk-group-heading]]:font-medium"
                          cmdk-group=""
                          data-slot="command-group"
                          data-value="undefined"
                          role="presentation"
                        >
                          <div
                            cmdk-group-items=""
                            role="group"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
